# Kivana-API

./: .gitignore  LICENSE.md
kivana-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
kivana-api/kivana-account/: app.css  app.js  index.html
kivana-api/kivana-admin/: admin.css  admin.js  index.html
kivana-api/kivana-portal/: index.html  learn.html  portal.css  portal.js  privacy.html  refunds.html  terms.html
kivana-api/kivana-site/: asset-manifest.json  index.html  portal.css  privacy.html  refunds.html  terms.html
kivana-api/kivana-site/static/css/: main.2a5ca006.css  main.2a5ca006.css.map  main.5296026e.css  main.5296026e.css.map  main.c6b2c7fb.css  main.c6b2c7fb.css.map
kivana-api/kivana-site/static/js/: main.1fb3c815.js  main.1fb3c815.js.map  main.5f4b5fd9.js  main.5f4b5fd9.js.map  main.ac110a37.js  main.ac110a37.js.map  main.c54fec0e.js  main.c54fec0e.js.map  main.e964d4c9.js  main.e964d4c9.js.LICENSE.txt  main.e964d4c9.js.map
kivana-api/migrations/: 0001_init.sql  0002_licensing.sql  0003_admin.sql  0004_pricing_plans.sql  0005_user_ips.sql  0006_user_profile.sql  0007_admin_ip_lock.sql  0008_staff_discounts_founders.sql  0009_contact_messages.sql  0010_account_security.sql  0011_app_settings.sql  0012_support_chat.sql  0013_chat_keys.sql  0014_paypal_subscriptions.sql
kivana-api/scripts/: bootstrap-ubuntu.sh  setup-wizard.sh
kivana-api/src/: main.rs
