[package]
name = "kivana-api"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros", "multipart"] }
dotenvy = "0.15"
hex = "0.4"
jsonwebtoken = "9.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "macros"] }
time = { version = "0.3", features = ["serde", "parsing"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
